--- a/packages/recomponents/src/components/r-icon/r-icon.scss
+++ b/packages/recomponents/src/components/r-icon/r-icon.scss
@@ -7,12 +7,12 @@
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
-    fill: var(--gray-color);
+    fill: var(--icon-color);
     color: transparent;
     display: inline-block;
     vertical-align: middle;
     margin: -0.4rem 0 -0.2rem 0;
-    transition: all .15s ease;
+    transition: var(--icon-transition);
 }
 
 .r-icon-20 {
