--- a/packages/recomponents/src/components/r-radio/r-toggle.scss
+++ b/packages/recomponents/src/components/r-radio/r-toggle.scss
@@ -1,213 +1,90 @@
-// -----------------------------------------------------------------------------
-// This file contains all styles related to the toggle components.
-// (Checkbox, Radio and more...)
-// -----------------------------------------------------------------------------
-
-.r-field-label-toggle {
-    display: inline-block;
+.r-radio {
     position: relative;
-    padding-left: 2.8rem;
-    margin: 0;
-    cursor: pointer;
 }
 
-.r-field-label-toggle.is-disabled {
-    color: $muted;
-}
-
-.r-field-caption-toggle {
-    padding-left: 2.8rem;
-    margin-top: $space-rem-xxs;
-}
-
-/**
-* Radio
-*/
 input.r-field-radio[type=radio] {
     opacity: 0;
     position: absolute;
     left: 0;
     top: 0;
-    height: 20px;
-    width: 20px;
+    height: var(--space-m);
+    width: var(--space-m);
     box-sizing: border-box;
     z-index: 10;
     cursor: pointer;
 
-    &:checked ~ .r-field-radio-style,
+    &:checked ~ .r-field-radio-style {
+        background: var(--radio-checked-background);
+        box-shadow: var(--radio-checked-box-shadow);
+        border: var(--radio-checked-border);
+    }
+
     &:focus ~ .r-field-radio-style {
-        box-shadow: 0 0 0 1px #0044D4 inset, 0 0 0 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 1px #0044D4;
+        background: var(--radio-focus-background);
+        box-shadow: var(--radio-focus-box-shadow);
+        border: var(--radio-focus-border);
     }
 
     &:checked ~ .r-field-radio-style .r-icon {
-        fill: var(--primary-color);
+        fill: var(--radio-checked-icon-color);
         opacity: 1;
     }
 
     &[disabled] ~ .r-field-radio-style {
-        background: var(--background-color);
+        background: var(--radio-disabled-background);
+        box-shadow: var(--radio-disabled-box-shadow);
     }
 }
 
 .r-field-radio-style {
     cursor: pointer;
     box-sizing: border-box;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
+    background: var(--radio-background);
+    height: var(--space-m);
+    width: var(--space-m);
     position: absolute;
-    top: $space-xxs;
-    left: $space-xxs;
-    box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 2px 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 0 #0044D4;
-    transition: box-shadow .1s ease;
+    top: var(--space-xxs);
+    left: var(--space-xxs);
+    border-radius: var(--radio-border-radius);
+    box-shadow: var(--radio-box-shadow);
+    transition: var(--radio-transition);
+    border: var(--radio-border);
 }
 
 .r-field-radio-style .r-icon {
     position: absolute;
-    top: -$space-xxs;
-    right: -$space-xxs;
+    top: calc(var(--space-xxs) * -1);
+    right: calc(var(--space-xxs) * -1);
     opacity: 0;
 }
 
-/**
-* Radio Button
-*/
-.r-field.is-button {
-    & .r-field-label-toggle {
-        display: inline-block;
-        height: auto;
-        box-sizing: border-box;
-        text-transform: capitalize;
-        text-align: center;
-        vertical-align: baseline;
-        user-select: none;
-        appearance: none;
-        background: linear-gradient(to bottom, #FFFFFF 0%, #F6F8F9 100%);
-        box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 2px 0 rgba(161, 178, 193, 0.3);
-        color: var(--text-color);
-        cursor: pointer;
-        border-radius: $border-radius;
-        border: none;
-        padding: $space-rem-s $space-rem-m;
-        font-family: var(--primary-font-stack);
-        font-weight: $regular;
-        font-size: $paragraph-rem;
-        line-height: $line-height-rem;
-        transition: box-shadow .15s ease;
-        outline: none;
-
-        &:hover {
-            background: var(--background-color);
-            text-decoration: none;
-        }
-
-        &:active {
-            background: var(--background-color);
-            box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 3px 1px #C4CED8 inset;
-        }
-
-        &.is-checked {
-            background: linear-gradient(to bottom, #0044D4 0%, #2600d4 100%);
-            color: #FFFFFF;
-            box-shadow: 0 1px 2px 0 rgba(161, 178, 193, 0.8);
-        }
-    }
-
-    & .r-field-radio-style {
-        display: none;
-    }
-}
-
-.r-field.is-button-group {
-    @extend .r-field, .is-button;
-    margin-right: -1px;
-
-    & .r-field-label-toggle {
-        width: 100%;
-    }
-}
-
-.btn-group .r-field.is-button-group:not(:first-child):not(:last-child) {
-    & .r-field-label-toggle {
-        border-radius: 0;
-    }
-}
-
-.btn-group .r-field.is-button-group:first-child {
-    & .r-field-label-toggle {
-        border-radius: $border-radius 0 0 $border-radius;
-    }
-}
-
-.btn-group .r-field.is-button-group:last-child {
-    & .r-field-label-toggle {
-        border-radius: 0 $border-radius $border-radius 0;
-    }
-}
-
-/**
-* Switch
-*/
-.r-field-switch-body {
-    display: flex;
-    height: 20px;
-    width: 36px;
-    border-radius: 36px;
+.r-field-label-toggle {
+    display: inline-block;
+    color: var(--radio-label-color);
+    line-height: var(--radio-label-line-height);
+    font-size: var(--radio-label-font-size);
+    font-weight: var(--radio-label-font-weight);
     position: relative;
-    vertical-align: baseline;
+    padding-left: var(--radio-label-left-space);
+    margin: 0;
     cursor: pointer;
 }
 
-input.r-field-switch[type=checkbox] {
-    opacity: 0;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 20px;
-    width: 20px;
-    box-sizing: border-box;
-
-    &:checked + .r-field-switch-handle {
-        background-color: var(--primary-color);
-    }
-
-    &:focus + .r-field-switch-handle {
-        box-shadow: 0 0 0 2px var(--primary-color);
-    }
-
-    &:checked:focus + .r-field-switch-handle {
-        box-shadow: 0 0 0 2px rgba(var(--primary-color), 0.5);
-    }
-
-    &:checked + .r-field-switch-handle::before {
-        transform: translateX(16px);
-    }
-
-    &[disabled] + .r-field-switch-handle {
-        background: var(--light-gray-color);
-    }
+.r-field-label-toggle.is-disabled {
+    color: var(--radio-label-disabled-color);
 }
 
-.r-field-switch-handle {
-    position: absolute;
-    border-radius: 20px;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: var(--light-gray-color);
-    transition: 0.4s;
+.r-field-caption-toggle {
+    padding-left: var(--radio-caption-left-space);
+    margin-top: var(--radio-caption-margin-top);
 }
 
-.r-field-switch-handle::before {
-    position: absolute;
-    content: "";
-    height: 16px;
-    width: 16px;
-    border-radius: 50%;
-    left: $space-xxs;
-    bottom: $space-xxs;
-    background-color: white;
-    transition: 0.2s;
+.r-field-caption {
+    display: block;
+    color: var(--radio-caption-color);
+    line-height: var(--radio-caption-line-height);
+    font-size: var(--radio-caption-font-size);
+    font-weight: var(--radio-caption-font-weight);
+    margin-top: var(--space-xs);
 }
+
