--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -473,7 +473,7 @@ body, .article {
     --tile-background: var(--mono-color-0);
     --tile-drop-shadow: var(--elevation-100);
     --tile-border-radius: var(--border-radius);
-    --tile-title-font-family: var(--secondary-font-stack);
+    --tile-title-font-family: var(--primary-font-stack);
     --tile-title-font-weight: var(--font-weight-medium);
     --tile-title-line-height: var(--font-line-height-h2);
     --tile-title-padding: var(--space-default) var(--space-default) 0 var(--space-default);
